test/yamls/e2e/client-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-b
  labels:
    name: client-b
spec:
  containers:
  - name: client-pod
    image: contiv/util-busybox
    env:
    - name: http_proxy
      value: ""
    - name: https_proxy
      value: ""
    command: ["sleep"]
    args: ["7200"]
