test/yamls/e2e/e2e.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e
  labels:
    purpose: test
    openshift.io/run-level: "0"
