test/yamls/e2e/simple-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
spec:
  selector:
    app: simple
  ports:
  - name: port1
    protocol: TCP
    port: 80
    targetPort: 80
  - name: port2
    protocol: TCP
    port: 81
    targetPort: 81
