test/yamls/e2e/srvr-81.yaml
apiVersion: v1
kind: Pod
metadata:
  name: srvr-81
  labels:
    app: simple
spec:
  containers:
  - name: pod-srvr81
    image: alpine
    command: ["/bin/sh"]
    args: ["-c", "nc -l -p 81"]
