test/yamls/e2e/upd_policy2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: upd-policy
spec:
  podSelector:
    matchLabels:
      app: simple
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: "client-b"
    ports:
      - port: 81
